--- a/app/src/main/res/layout/activity_changeqd.xml
+++ b/app/src/main/res/layout/activity_changeqd.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/addteam"
         android:layout_width="match_parent"
         android:layout_height="120px"
         android:textSize="45px"
