--- a/app/src/main/res/layout/activity_tsxx_set.xml
+++ b/app/src/main/res/layout/activity_tsxx_set.xml
@@ -24,6 +24,7 @@
         <include layout="@layout/horizontal_line" />
 
         <RelativeLayout
+            android:id="@+id/rl_receive_msg"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -37,6 +38,7 @@
                 android:textColor="@color/black" />
 
             <TextView
+                android:id="@+id/tv_receive_status"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginRight="50px"
