--- a/app/src/main/res/layout/adapter_bsss.xml
+++ b/app/src/main/res/layout/adapter_bsss.xml
@@ -83,6 +83,7 @@
                 android:layout_marginTop="10px"
                 android:text="上海体育馆"
                 android:textColor="@color/text_gray"
+                android:paddingBottom="4dp"
                 android:textSize="38px" />
 
 
