--- a/app/src/main/res/layout/star_details.xml
+++ b/app/src/main/res/layout/star_details.xml
@@ -26,7 +26,7 @@
             <ImageView
                 android:id="@+id/iv_top_pic"
                 android:layout_width="match_parent"
-                android:layout_height="500px"
+                android:layout_height="wrap_content"
                 android:scaleType="fitXY"
                 android:src="@mipmap/timg" />
 
