--- a/app/src/main/res/layout/consult_layout.xml
+++ b/app/src/main/res/layout/consult_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/action_bar"
@@ -15,206 +15,178 @@
     </FrameLayout>
 
     <ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-        android:layout_below="@id/action_bar"
-    android:fillViewport="true"
-    >
-    <LinearLayout
+        android:id="@+id/sl_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-        <ImageView
-            android:id="@+id/iv_top_pic"
+        android:layout_below="@id/action_bar"
+        android:fillViewport="true">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/timg"
-            android:scaleType="fitXY"
-            />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_top_pic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                android:src="@mipmap/timg" />
+
             <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/text_size"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-            >
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="资讯标题，资讯标题，资讯标题，资讯标题，资讯标题，资讯标题，资讯标题，资讯标题，"
-                android:textColor="@color/font_main"
-                android:textSize="@dimen/text_size"
-                android:maxLines="2"
-                android:maxWidth="900px"
-                />
-             <LinearLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:gravity="center_vertical"
-                 android:layout_marginTop="@dimen/margin_top"
-                 >
-            <TextView
-                android:id="@+id/tv_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2017-05-28"
-                android:textColor="@color/font_gray"
-                android:textSize="@dimen/text_consult"
-                />
-                <View
-                    android:id="@+id/line_v"
-                    android:layout_width="0.5dp"
-                    android:layout_height="36px"
-                    android:background="@color/font_gray"
-                    android:layout_marginLeft="10px"
-                    />
-                 <TextView
-                     android:id="@+id/tv_action"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="冬令营"
-                     android:textColor="@color/font_gray"
-                     android:textSize="@dimen/text_consult"
-                     android:layout_marginLeft="10px"
-                     />
-             </LinearLayout>
+                android:padding="@dimen/text_size">
+
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="2"
+                    android:maxWidth="900px"
+                    android:text="资讯标题，资讯标题，资讯标题，资讯标题，资讯标题，资讯标题，资讯标题，资讯标题，"
+                    android:textColor="@color/font_main"
+                    android:textSize="@dimen/text_size" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:layout_marginTop="@dimen/margin_top"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/tv_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="2017-05-28"
+                        android:textColor="@color/font_gray"
+                        android:textSize="@dimen/text_consult" />
+
+                    <View
+                        android:id="@+id/line_v"
+                        android:layout_width="0.5dp"
+                        android:layout_height="36px"
+                        android:layout_marginLeft="10px"
+                        android:background="@color/font_gray" />
+
+                    <TextView
+                        android:id="@+id/tv_action"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10px"
+                        android:text="冬令营"
+                        android:textColor="@color/font_gray"
+                        android:textSize="@dimen/text_consult" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_left"
                     android:gravity="center_vertical"
-                    >
-                    <ImageView android:visibility="gone"
+                    android:orientation="horizontal">
+
+                    <ImageView
                         android:id="@+id/iv_head_icon1"
                         android:layout_width="@dimen/padding"
                         android:layout_height="@dimen/padding"
-                        app:layout_auto_baseheight="width"
                         android:src="@mipmap/tuijian_touxiang6"
-                        />
+                        android:visibility="gone"
+                        app:layout_auto_baseheight="width" />
+
                     <TextView
                         android:id="@+id/tv_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_top"
                         android:text="作者名字"
                         android:textColor="@color/font_gray"
-                        android:textSize="@dimen/text_size_notice"
-                        android:layout_marginLeft="@dimen/margin_top"
-                        />
+                        android:textSize="@dimen/text_size_notice" />
+
                     <TextView
                         android:id="@+id/read_count"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/font_gray"
-                        android:textSize="@dimen/text_consult"
-                        android:text="阅读 398"
                         android:gravity="right"
-                        />
+                        android:text="阅读 398"
+                        android:textColor="@color/font_gray"
+                        android:textSize="@dimen/text_consult" />
                 </LinearLayout>
+
                 <WebView
                     android:id="@+id/tv_content1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，"
                     android:layout_marginTop="@dimen/list_item_top"
-                    />
-                <!--<ImageView-->
-                    <!--android:id="@+id/iv_mid1"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="480px"-->
-                    <!--android:src="@mipmap/timg"-->
-                    <!--android:scaleType="fitXY"-->
-                    <!--android:layout_marginTop="@dimen/list_item_top"-->
-                    <!--/>-->
-                <!--<TextView-->
-                    <!--android:id="@+id/tv_content2"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，"-->
-                    <!--android:layout_marginTop="@dimen/list_item_top"-->
-                <!--/>-->
-                <!--<ImageView-->
-                    <!--android:id="@+id/iv_mid2"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="480px"-->
-                    <!--android:src="@mipmap/timg"-->
-                    <!--android:scaleType="fitXY"-->
-                    <!--android:layout_marginTop="@dimen/list_item_top"-->
-                    <!--/>-->
-                <!--<TextView-->
-                    <!--android:id="@+id/tv_end"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="文章结尾。"-->
-                    <!--android:layout_marginTop="@dimen/list_item_top"-->
-                    <!--/>-->
+                    android:text="文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，文章正文内容，" />
 
-        </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/margin_leftx2"
-            android:gravity="center_vertical"
-            android:text="相关资讯"
-            android:textColor="@color/font_main"
-            android:textSize="@dimen/text_size"
-            android:layout_marginLeft="@dimen/margin_left"
-            />
-        <top.smartsport.www.widget.MyListView
-            android:id="@+id/lv_consult"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:divider="@color/diver_color"
-            android:dividerHeight="0.5dp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/margin_leftx2"
-            android:gravity="center_vertical"
-            android:text="最新评论"
-            android:textColor="@color/font_main"
-            android:textSize="@dimen/text_size"
-            android:layout_marginLeft="@dimen/margin_left"
-            />
-        <top.smartsport.www.swipe.SwipeMenuListView
-            android:id="@+id/lv_comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:divider="@color/diver_color"
-            android:dividerHeight="0.5dp" />
-        <!--<top.smartsport.www.widget.MyListView
-            android:id="@+id/lv_comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:divider="@color/diver_color"
-            android:dividerHeight="0.5dp"
-            />-->
+            </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/diver_color"
-            />
-        <LinearLayout android:id="@+id/send_comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="@dimen/margin_left"
-            >
-        <TextView
-            android:id="@+id/tv_send_comment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/font_gray"
-            android:text="点评一下"
-            android:textSize="@dimen/text_size"
-            android:gravity="center"
-            android:drawableLeft="@mipmap/icon_comment"
-            android:drawablePadding="20px"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_leftx2"
+                android:layout_marginLeft="@dimen/margin_left"
+                android:gravity="center_vertical"
+                android:text="相关资讯"
+                android:textColor="@color/font_main"
+                android:textSize="@dimen/text_size" />
+
+            <top.smartsport.www.widget.MyListView
+                android:id="@+id/lv_consult"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@color/diver_color"
+                android:dividerHeight="0.5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_leftx2"
+                android:layout_marginLeft="@dimen/margin_left"
+                android:gravity="center_vertical"
+                android:text="最新评论"
+                android:textColor="@color/font_main"
+                android:textSize="@dimen/text_size" />
+
+            <top.smartsport.www.swipe.SwipeMenuListView
+                android:id="@+id/lv_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@color/diver_color"
+                android:dividerHeight="0.5dp" />
+            <!--<top.smartsport.www.widget.MyListView
+                android:id="@+id/lv_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@color/diver_color"
+                android:dividerHeight="0.5dp"
+                />-->
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/diver_color" />
+
+            <LinearLayout
+                android:id="@+id/send_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="@dimen/margin_left">
+
+                <TextView
+                    android:id="@+id/tv_send_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@mipmap/icon_comment"
+                    android:drawablePadding="20px"
+                    android:gravity="center"
+                    android:text="点评一下"
+                    android:textColor="@color/font_gray"
+                    android:textSize="@dimen/text_size" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
 
     <FrameLayout
         android:id="@+id/fl_loading"
