--- a/app/src/main/res/layout/fragment_qxkt.xml
+++ b/app/src/main/res/layout/fragment_qxkt.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ptr="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,8 +13,31 @@
         android:overScrollMode="never"
         ptr:ptrShowIndicator="false"
         >
-
-
     </com.handmark.pulltorefresh.library.PullToRefreshListView>
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/rl_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="没有数据哦"
+                android:textColor="@color/text_gray"
+                android:textSize="17dip" />
+
+        </LinearLayout>
+    </RelativeLayout>
+
+
+</RelativeLayout>
