1.资讯：轰动资讯、赛事新闻切换城市及时刷新bug修复；2.青训：青训课程状态优化；3.账户设置：左右脚改为左右均衡；

--- a/app/src/main/res/layout/fragment_zx.xml
+++ b/app/src/main/res/layout/fragment_zx.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50px"
                 android:layout_marginRight="20px"
-                android:text="上海市"
+                android:text="选择城市"
                 android:textColor="@color/white"
                 android:textSize="45px" />
 
